2003-12-05  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* mapcompile.cpp
	  - now islands are treated right. Just one simple trick worked
	    better than 4 hours of puzzling/thinking. *argh*

2003-12-05  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game.h game.cpp
	  - added handling for (cron) jobs. Now periodic events haven't to
	    be computed every frame, just every x seconds.
	    Just create a function object as heir from game::job and
	    register it in class game.
	    e.g. cloud animation every 3600/256 = 14.25 seconds,
	    land collision course every 10 seconds, game win/loose every 5
	    secs. etc.
	* mapcompile.cpp
	  - islands are smoother now. Getting closer.

2003-12-03  Markus Petermann  <markus.petermann@gmx.net>
	* src/tinyxml: Added TinyXML parser.

2003-12-03  Markus Petermann  <markus.petermann@gmx.net>
	* src/damageview.cpp: New damageview program. The top, side and front
	  view as well as waterline is displayed.

2003-12-02  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* coastmap.cpp
	  - map image is used as texture for map quads.
	  - new Makefiles to fix missing files at install.

2003-12-02  Markus Petermann  <markus.petermann@gmx.net>
	* src/user_interface.cpp: Text of command is written with a fixed
	  format.

2003-12-01  Thorsten Jordan <thorsten_jordan@gmx.de>
	* mapcompile.cpp coastline.cpp
	  - coast lines are smoothed over segment boarders.
	    coast has no more hard corners.
	  - map is compressed with run length encoding.

2003-12-01  Markus Petermann  <markus.petermann@gmx.net>

	* src/submarine_interface.cpp: Periscope view size changed to 20 degrees
	  in unzoomed and 5 degrees in zoomed mode. 5 degrees is the view size
	  when using normal glasses.
	* src/dangerdeep.kdevprj: Updates project files for KDevelop.

2003-11-30  Thorsten Jordan <thorsten_jordan@gmx.de>
	* fixed package build scripts.
	* renamed main linux binary from "subsim" to "dangerdeep"
	* add SDL path as include path, thus a simple #include <SDL.h>